feat: add device handler
