# internal/delivery/http/dto/device/create_device.go
@@ -1,0 +1,11 @@
+package device
+
+type CreateDeviceRequest struct {
+	DeviceName 	string `json:"deviceName"`
+	TraderID 	string `json:"traderId"`
+	Enabled		bool   `json:"enabled"`
+}
+
+type CreateDeviceResponse struct {
+	
+}
