# internal/delivery/http/dto/device/delete_device.go
@@ -1,0 +1,9 @@
+package device
+
+type DeleteDeviceRequest struct {
+	DeviceID string `json:"deviceId"`
+}
+
+type DeleteDeviceResponse struct {
+
+}
