# internal/delivery/http/dto/device/edit_device.go
@@ -1,0 +1,14 @@
+package device
+
+type EditDeviceRequest struct {
+	EditDeviceParams EditDeviceParams `json:"editDeviceParams"` 
+}
+
+type EditDeviceParams struct {
+	DeviceName string `json:"deviceName"`
+	Enabled    bool   `json:"enabled"`
+}
+
+type EditDeviceResponse struct {
+
+}
