# internal/delivery/http/dto/device/get_trader_devices.go
@@ -1,0 +1,16 @@
+package device
+
+type GetTraderDevicesRequest struct {
+	TraderID string `json:"traderId"`
+}
+
+type GetTraderDevicesResponse struct {
+	Devices []Device `json:"devices"`
+}
+
+type Device struct {
+	DeviceID 	string 	`json:"deviceId"`
+	DeviceName 	string 	`json:"deviceName"`
+	TraderID 	string 	`json:"traderId"`
+	Enabled 	bool 	`json:"enabled"`
+}
